[package]
name = "vs-frameblender-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
rustsynth = {version = "=0.5.1", features = ["vapoursynth-functions"] }
rustsynth-derive = "=0.5.1"

[features]
plugin = []
default = ["simd"]
simd = []

[lib]
name = "frameblender_rs"
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
target-cpu = "native"